test/errors/expr_async_comprehension_non_async.py
def f(it):
    return [x async for x in it]
