test/errors/expr_async_comprehension_non_async.py.expected
test/errors/expr_async_comprehension_non_async.py:2 error: asynchronous comprehension outside async function
